--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -9,5 +9,29 @@
     border-right-color: #0681d0;
     border-top-color: #0681d0;
     box-shadow: 0px -3px 10px 5px rgba(1,209,254,0.5),0px 3px 10px 5px rgba(255,32,0,0.5);
+}
+
+.profile{
+    border-radius: 10px;
+    text-align: center;
+    opacity: 0.7;
+    position: absolute;
+    background: rgb(0,0,0);
+    width: 25rem;
+    height: 26rem;
+    transform: scale(1);
+    left: 8rem;
+    top: 20px;
+
+}
+
+.profile-userImg{
+    display:block;
+    margin:0 auto;
+    width:64px;
+    height:64px;
+    border-radius:50px;
+    border-bottom-color: red;
+    box-shadow: 0px -3px 10px 5px rgba(1,209,254,0.5), 0px 3px 10px 5px rgba(255,32,0,0.5);
 
 }
