--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>CodeAnalyze</title>
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../css/m1.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/c1.css">
-    <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+
+    <script src="../js/jquery-3.5.1.min.js"></script>
+    <script src="../js/jquery.cookie.js"></script>
     <script src="../layer/layer.js"></script>
     <!-- 新 Bootstrap 核心 CSS 文件 -->
     <link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -23,23 +26,28 @@
     </div>
 </div>
 
+
+
+
 <script>
-    var loginWinHandler = 0;
-    var registerWinHandler = 0;
-    function onUserImgClike(){
-        loginWinHandler = layer.open({
-            type:1,
-            title:"登录",
-            area:["25%","50%"],
-            content:$("#loginBox"),
-            cancel: function (){
-                document.getElementById("loginBox").style.display = "none"
+    window.onload = function () {
+        $.ajax({
+            url : '/user/tokenLogin',
+            type: 'post',
+            dataType: 'json',
+            contentType: 'json',
+            success(s){
+                var uIconUri = s.uIcon
+                $("#img_userIcon").attr("src", 'db/usericon/' + uIconUri)
+                $("#profile_userImg").attr("src", 'db/usericon/' + uIconUri)
+                $("#profile_username").text(s.username);
             },
-            end: function (){
-                document.getElementById("loginBox").style.display = "none"
+            error(e){
+                console.log(e)
             }
         })
     }
+
 </script>
 <div id="app">
     <script>
@@ -92,144 +100,16 @@
         </script>
     </main>
 
-    <aside class="sidebar anim on">
-        <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
-        <nav class="navbar">
-            <div class="user-img-box" >
-                <a href="#" onclick="onUserImgClike()">
-                    <img id="img_userIcon" class="user-img" src="../img/defaultUserImg.png" />
-                </a>
-            </div>
-            <ul class="nav nav-main">
-                <li class="nav-item">
-                    <a class="nav-item-link" href="/">Home</a>
-                </li>
-            </ul>
-        </nav>
-    </aside>
 
 
+    <div th:include="aside"></div>
 </div>
 
 
-<div id="loginBox" hidden="hidden">
-    <div class="form row">
-        <div class="form-horizontal col-sm-offset-3 col-md-offset-3" id="login_form">
-            <h3 class="form-title">Login to your account</h3>
-            <div class="col-sm-9 col-md-9">
-                <div class="form-group">
-                    <i class="fa fa-user fa-lg"></i>
-                    <input id="input_username" class="form-control required" type="text" placeholder="Username" name="username" autofocus="autofocus" maxlength="20"/>
-                </div>
-                <div class="form-group">
-                    <i class="fa fa-lock fa-lg"></i>
-                    <input id="input_pwd" class="form-control required" type="password" placeholder="Password" name="password" maxlength="8"/>
-                </div>
-                <div class="form-group">
-
-                    <hr />
-                    <a href="javascript:;" id="register_btn" class="" onclick="switchToReg()">Create an account</a>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-success pull-right" value="Login " onclick="onLoginClick()"/>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div id="registerBox" hidden="hidden">
-    <div class="form row">
-        <div class="form-horizontal col-sm-offset-3 col-md-offset-3" id="reg_form">
-            <h3 class="form-title">Create a new account</h3>
-            <div class="col-sm-9 col-md-9">
-                <div class="form-group">
-                    <i class="fa fa-user fa-lg"></i>
-                    <input id="input_username_reg" class="form-control required" type="text" placeholder="Username" name="username" autofocus="autofocus" maxlength="20"/>
-                </div>
-                <div class="form-group">
-                    <i class="fa fa-lock fa-lg"></i>
-                    <input id="input_pwd_reg" class="form-control required" type="password" placeholder="Password" name="password" maxlength="8"/>
-                </div>
-                <div class="form-group">
-
-                    <hr />
-                    <a href="javascript:;" id="login_btn" class="" onclick="switchToLogin()">Return to login</a>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btn btn-success pull-right" value="Submit" onclick="onRegButtonClick()"/>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
+<div th:include = "dialog-login"></div>
 
 </body>
 
-<script>
 
-    function switchToReg(){
-        layer.close(layer.index)
-        registerWinHandler = layer.open({
-            type:1,
-            title:"注册",
-            area:["25%","50%"],
-            content:$("#registerBox"),
-            cancel: function (){
-                document.getElementById("registerBox").style.display = "none"
-            },
-            end: function (){
-                document.getElementById("registerBox").style.display = "none"
-            }
-        })
-    }
-
-    function switchToLogin(){
-        layer.close(layer.index)
-        loginWinHandler = layer.open({
-            type:1,
-            title:"登入",
-            area:["25%","50%"],
-            content:$("#loginBox"),
-            cancel: function (){
-                document.getElementById("loginBox").style.display = "none"
-            },
-            end: function (){
-                document.getElementById("loginBox").style.display = "none"
-            }
-        })
-    }
-    function onLoginClick(){
-        var d = {
-            'username': $("#input_username").val(),
-            'password': $("#input_pwd").val()
-        }
-        $.ajax({
-            url: '/user/login',
-            type: 'post',
-            data: JSON.stringify(d),
-            dataType:"json",
-            contentType:"application/json;charset=utf-8",
-            success:function (d){
-
-                if(d.state == -1){
-                    layer.msg("登入失败")
-                }else{
-                    layer.close(loginWinHandler)
-                    layer.msg("登入成功",{offset:'t'})
-                    console.log(d)
-                    document.getElementById("img_userIcon").src = ("/db/usericon/" + d.uri)
-                }
-            },
-            error:function (e){
-                //layer.close(layer.index)
-                layer.msg("登入失败")
-                console.log(e)
-            }
-        })
-
-    }
-</script>
+<input id="hidden_token"  th:value="${session.token_login}" hidden="hidden">
 </html>
