--- a/src/main/resources/templates/aside.html
+++ b/src/main/resources/templates/aside.html
@@ -1,15 +1,27 @@
-
+<script src="/js/siderbar.js"></script>
 <aside class="sidebar anim on">
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
     <nav class="navbar">
         <div class="user-img-box" onmousemove="imgBoxMouseMove()" onmouseleave="imgBoxMouseLeave()">
             <a href="#" onclick="onUserImgClike()" >
-                <img id="img_userIcon" class="user-img" src='../img/defaultUserImg.png' />
+                <img id="img_userIcon" class="user-img" src='/img/defaultUserImg.png' />
             </a>
         </div>
         <ul class="nav nav-main">
             <li class="nav-item">
                 <a class="nav-item-link" href="/">Home</a>
+            </li>
+
+            <li class="nav nav-main" onmousedown="sideOrgOnClick()" onmousemove="sideProjMouseMove()" onmouseleave="sideProjMouseLeave()">
+                <a class="nav-item-link" href="#">Org</a>
+                <div id="orgAsideDiv"
+                     class="aside_org" style="visibility: hidden"  onmousemove="sideProjMouseMove()" onmouseleave="sideProjMouseLeave()">
+
+                </div>
+            </li>
+            <li class="nav nav-main">
+                <a class="nav-item-link" th:href="@{'/proj/'+${session.username}+'/main'}">Project</a>
+
             </li>
         </ul>
     </nav>
@@ -17,8 +29,8 @@
     <div id="profileDiv" onmousemove="profileMouseIn()" onmouseleave="profileMouseLeave()"
          class="profile" style="visibility: hidden">
         <a href="/">
-            <img id = "profile_userImg" class="profile-userImg" src="../db/usericon/default.jpg"/>
-            <p id="profile_username" style="color: #f5f5f5; margin-top: 1.6rem;font-size: 16px" th:text="${session.username}"><p>
+            <img id = "profile_userImg" class="profile-userImg" src="/db/usericon/default.jpg"/>
+            <p id="profile_username" style="color: #f5f5f5; margin-top: 1.6rem;font-size: 16px" th:text="${session.nickName}"><p>
         </a>
 
         <div id="site_state" style="display:block;margin:0 auto;opacity:1;display:block;transform:translateX(0px);background: #000000; width:100px;height:20px;">
@@ -51,22 +63,28 @@
                 <i class="fa fa-fw fa-github"></i>Sign Out</a>
         </div>
     </div>
+
+
+
 </aside>
 
 <script>
 
-    function imgBoxMouseMove(){
 
-        document.getElementById("profileDiv").style.visibility="visible";//显示
+    function orgDisplayTest(){
+        var di = 0
+        var d = [{oname:"individual"},{oname:"SakuyuiOrg"},{oname:"Org2"}]
+        var innerText = ''
+        for(i in d){
+            innerText += '<a class="nav-item-link ' + ((di == i)?'aside_org_selected':'');
+            innerText += '" href="#">'
+            innerText += d[i].oname
+            innerText += "</a>"
+            $("#orgAsideDiv").html(innerText)
+        }
+        console.log(innerText)
     }
 
-    function imgBoxMouseLeave(){
-        document.getElementById("profileDiv").style.visibility="hidden";//显示
-    }
-    function profileMouseIn(){
-        document.getElementById("profileDiv").style.visibility="visible";//显示
-    }
-    function profileMouseLeave(){
-        document.getElementById("profileDiv").style.visibility="hidden";//显示
-    }
+
 </script>
+
