--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../css/m1.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" type="text/css" href="../css/c1.css">
-
+    <script src="../js/typed.min.js"></script>
     <script src="../js/jquery-3.5.1.min.js"></script>
     <script src="../js/jquery.cookie.js"></script>
     <script src="../layer/layer.js"></script>
@@ -17,8 +17,8 @@
 
     <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
     <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 </head>
+
 <body class="pace-done">
 <div class="pace pace-inactive">
     <div class="pace-progress" data-progress-text="100%" data-progress="99" style="transform: translate3d(100%, 0px, 0px);">
@@ -69,7 +69,7 @@
                 </a>
             </div>
         </section>
-        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11/lib/typed.min.js"></script>
+
         <script>
             try {
                 var typed = new Typed("#subtitle", {
